cours/service-networking/test-74/ingress-app.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: ingress-wear-watch
  namespace: app-space
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: wear-service
              servicePort: 8080
            path: /wear
          - backend:
              serviceName: video-service
              servicePort: 8080
            path: /stream
          - backend:
              serviceName: food-service
              servicePort: 8080
            path: /eat
