cours/service-networking/test-74/ingress-pay.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-pay
  namespace: critical-space
  # see https://kubernetes.github.io/ingress-nginx/examples/rewrite/
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /pay
            backend:
              serviceName: pay-service
              servicePort: 8282
